Remove apache commons dependency